# task2

./: .gitignore  reporting note.txt
program/: CMakeLists.txt  ball.cpp  ball.h  container.cpp  container.h  main.cpp  parallelepiped.cpp  parallelepiped.h  random.h  shape.cpp  shape.h  tetrahedron.cpp  tetrahedron.h
tests_out/: test1_out1.txt  test1_out2.txt  test2_out1.txt  test2_out2.txt  test3_out1.txt  test3_out2.txt  test4_out1.txt  test4_out2.txt  test5_out1.txt  test5_out2.txt  test6_out1.txt  test6_out2.txt
